tests/api/reference/negative/13-toml-float.asm
const invalid = toml.parse("value = 1.5")
